update drone plan distance
